# dockingpane

./: CMakeLists.txt  DockingPane.pro  README.md  docking_guide.cpp  docking_guide.h  docking_guide.ui  docking_guide_cover.cpp  docking_guide_cover.h  docking_guide_diamond.cpp  docking_guide_diamond.h  docking_pane.cpp  docking_pane_client.h  docking_pane_container.cpp  docking_pane_container.h  docking_pane_container_nclient.cpp  docking_pane_container_nclient.h  docking_pane_container_nclient.ui  docking_pane_container_tabbar.cpp  docking_pane_container_tabbar.h  docking_pane_fixed_window.cpp  docking_pane_fixed_window.h  docking_pane_float_window.h  docking_pane_handle.cpp  docking_pane_layout.cpp  docking_pane_layout_item_info.cpp  docking_pane_layout_item_info.h  docking_pane_manager.cpp  docking_pane_manager.h  docking_pane_tabbar.cpp  docking_pane_tabbar.h  docking_pane_tabbar_item.cpp  docking_pane_tabbar_item_1.cpp  docking_pane_window_resizer.h  docking_workbench.cpp  docking_workbench.h  res.qrc
images/vs2019/: dock_guide.psd  sider.psd
src/: docking_client_guide.cpp  docking_guide.cpp  docking_guide.h  docking_guide.ui  docking_guide_cover.cpp  docking_guide_diamond.cpp  docking_pane.cpp  docking_pane.h  docking_pane_client.cpp  docking_pane_client.h  docking_pane_client_region.cpp  docking_pane_client_region.h  docking_pane_client_region_item_info.cpp  docking_pane_client_region_item_info.h  docking_pane_container.cpp  docking_pane_container.h  docking_pane_container_nclient.cpp  docking_pane_container_nclient.h  docking_pane_container_nclient.ui  docking_pane_container_tabbar.cpp  docking_pane_container_tabbar.h  docking_pane_fixed_window.cpp  docking_pane_float_window.cpp  docking_pane_float_window.h  docking_pane_handle.cpp  docking_pane_handle.h  docking_pane_layout.cpp  docking_pane_layout.h  docking_pane_layout_item_info.cpp  docking_pane_layout_item_info.h  docking_pane_manager.cpp  docking_pane_manager.h  docking_pane_tabbar.cpp  docking_pane_tabbar.h  docking_pane_tabbar_item.cpp  docking_pane_tabbar_item.h  docking_pane_tabbar_item_1.h  docking_pane_window_resizer.cpp  docking_qss.cpp  docking_qss.h  (+8 more)
src/images/vs2019/: dock_guide.psd
